<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#349"
    android:layout_height="match_parent"
    tools:context=".team.TeamActivity">

    <ImageView
        android:id="@+id/character_preview"
        android:layout_marginTop="10sp"
        android:layout_width="200sp"
        android:layout_height="350sp"
        android:src="@drawable/armin_1"
        app:layout_constraintBottom_toTopOf="@id/button_prev"
        app:layout_constraintRight_toLeftOf="@id/character_stats"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/button_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_prev"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_next"
        app:layout_constraintTop_toBottomOf="@id/character_preview" />

    <ImageButton
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/button_prev"
        app:layout_constraintRight_toLeftOf="@id/character_stats"
        app:layout_constraintTop_toBottomOf="@id/character_preview" />
    <TableLayout
        android:id="@+id/character_stats"
        android:layout_width="500sp"
        android:layout_height="match_parent"
        android:background="#AA1"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="10sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/character_stats_name"
                android:layout_width="466dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_span="6"
                android:text="Noname" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/level"
                />
            <TextView
                android:id="@+id/character_stats_level"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="start"
                android:text="0" />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/exp"
                />
            <TextView
                android:id="@+id/character_stats_exp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:text="0" />
            <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/form"
            />
            <TextView
                android:id="@+id/character_stats_form"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="end"
                android:text="0" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/attack"
                />
            <TextView
                android:id="@+id/character_stats_health"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="start"
                android:text="0" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/health"
                />
            <TextView
                android:id="@+id/character_stats_attack"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:text="0" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/defense"
                />
            <TextView
                android:id="@+id/character_stats_defense"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="end"
                android:text="0" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/dodge"
                />
            <TextView
                android:id="@+id/character_stats_dodge"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="start"
                android:text="0%" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/accuracy"
                />
            <TextView
                android:id="@+id/character_stats_accuracy"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:text="0%" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/critical_hit"
                />
            <TextView
                android:id="@+id/character_stats_critical_hit"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="end"
                android:text="0%" />
        </TableRow>
    </TableLayout>



</androidx.constraintlayout.widget.ConstraintLayout>