<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fight.FightActivity"
    android:padding="20sp"
    android:background="@drawable/fight_bg"
    >

    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/fight_character_name"
        android:text="Noname"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fight_string_level"
        app:layout_constraintTop_toBottomOf="@id/fight_character_name"
        app:layout_constraintRight_toLeftOf="@id/fight_character_level"
        android:layout_marginTop="5sp"
        android:text="@string/level"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="5sp"
        android:id="@+id/fight_character_level"
        app:layout_constraintTop_toBottomOf="@id/fight_character_name"
        app:layout_constraintLeft_toRightOf="@id/fight_string_level"
        android:text="1"
        />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/fight_string_health"
    app:layout_constraintTop_toBottomOf="@id/fight_character_level"
    app:layout_constraintRight_toLeftOf="@id/fight_character_health"
    android:layout_marginTop="5sp"
    android:text="@string/health"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="5sp"
        android:id="@+id/fight_character_health"
        app:layout_constraintTop_toBottomOf="@id/fight_character_level"
        app:layout_constraintLeft_toRightOf="@id/fight_string_health"
        android:text="200/500"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fight_string_attack"
        app:layout_constraintTop_toBottomOf="@id/fight_string_health"
        app:layout_constraintRight_toLeftOf="@id/fight_character_attack"
        android:layout_marginTop="5sp"
        android:text="@string/attack"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="5sp"
        android:id="@+id/fight_character_attack"
        app:layout_constraintTop_toBottomOf="@id/fight_character_health"
        app:layout_constraintLeft_toRightOf="@id/fight_string_attack"
        android:text="0"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fight_string_defense"
        app:layout_constraintTop_toBottomOf="@id/fight_string_attack"
        app:layout_constraintRight_toLeftOf="@id/fight_character_defense"
        android:layout_marginTop="5sp"
        android:text="@string/defense"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="5sp"
        android:id="@+id/fight_character_defense"
        app:layout_constraintTop_toBottomOf="@id/fight_character_attack"
        app:layout_constraintLeft_toRightOf="@id/fight_string_defense"
        android:text="0"
        />
    
    
    
    <!-- Monster -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/monster_stats_name"
        android:text="Goblin"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/monster_string_health"
        app:layout_constraintTop_toBottomOf="@id/monster_stats_name"
        app:layout_constraintRight_toLeftOf="@id/monster_stats_health"
        android:layout_marginTop="5sp"
        android:layout_marginRight="5sp"
        android:text="@string/health"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:id="@+id/monster_stats_health"
        app:layout_constraintTop_toBottomOf="@id/monster_stats_name"
        app:layout_constraintRight_toRightOf="parent"
        android:text="200/500"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/monster_string_attack"
        app:layout_constraintTop_toBottomOf="@id/monster_string_health"
        app:layout_constraintRight_toLeftOf="@id/monster_stats_attack"
        android:layout_marginTop="5sp"
        android:layout_marginRight="5sp"
        android:text="@string/attack"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:id="@+id/monster_stats_attack"
        app:layout_constraintTop_toBottomOf="@id/monster_stats_health"
        app:layout_constraintRight_toRightOf="parent"
        android:text="0"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/monster_string_defense"
        app:layout_constraintTop_toBottomOf="@id/monster_string_attack"
        app:layout_constraintRight_toLeftOf="@id/monster_stats_defense"
        android:layout_marginTop="5sp"
        android:layout_marginRight="5sp"
        android:text="@string/defense"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:id="@+id/monster_stats_defense"
        app:layout_constraintTop_toBottomOf="@id/monster_stats_attack"
        app:layout_constraintRight_toRightOf="parent"
        android:text="0"
        />
    <ListView
        android:id="@+id/fight_log"
        android:layout_width="300sp"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <Button
        android:id="@+id/start_fight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_fight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="startFight"
        />
</androidx.constraintlayout.widget.ConstraintLayout>